[package]
name = "rust-led"
version = "0.1.0"
authors = ["Gopa Kumar <gopakumarce@gmail.com>"]
edition = "2021"
resolver = "2"
keywords = ["embedded", "led", "graphics", "esp32", "arduino", "raspberry-pi"]
description = "Library to display text and images on Neopixel/WS2812 style of LEDs"
repository = "https://github.com/gopakumarce/RustLED"
license = "MIT"
readme = "README.md"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[dependencies]
anyhow = {version = "1", features = ["backtrace"]}
log = "0.4"
esp-idf-sys = { version = "0.32", features = ["binstart"] }
esp-idf-svc = "0.45"
esp-idf-hal = "0.40"
embedded-svc = "0.24"
embedded-hal = "0.2"
#mipidsi = "0.5"

[build-dependencies]
embuild = { version = "0.31", features = ["elf"] }
anyhow = "1"


