[workspace]
members = [
  "platforms/esp",
  "platforms/stub",
  "platforms/common",
  "common",
  "sample_main"
]

resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[patch.crates-io]
esp-idf-sys = { git = "https://github.com/gopakumarce/esp-idf-sys.git", branch = "gopa-v0.33.0" }

